Fix scan de entities y repositorios JPA Ejemplo de resultados paginados Agregado PagedMapper Agregada dependencia de data-commons en domain para poder paginar más fácil
